--- a/MyHomeApp/src/main/webapp/i18n/es/global.json
+++ b/MyHomeApp/src/main/webapp/i18n/es/global.json
@@ -21,6 +21,7 @@
       "admin": {
         "main": "Administración",
         "userManagement": "Gestión de usuarios",
+        "organizationManagement": "Gestión de organizaciones",
         "tracker": "Registro de usuarios",
         "metrics": "Métricas",
         "health": "Salud",
@@ -33,6 +34,7 @@
       "language": "Idioma"
     },
     "form": {
+      "refreshListLabel" : "Refrescar lista",
       "username.label": "Usuario",
       "username.placeholder": "Nombre de usuario",
       "currentpassword.label": "Contraseña actual",
