--- a/MyHomeApp/src/main/webapp/i18n/es/global.json
+++ b/MyHomeApp/src/main/webapp/i18n/es/global.json
@@ -22,6 +22,7 @@
         "main": "Administración",
         "userManagement": "Gestión de usuarios",
         "organizationManagement": "Gestión de organizaciones",
+        "incidencesManagement" : "Gestión de incidencias",
         "tracker": "Registro de usuarios",
         "metrics": "Métricas",
         "health": "Salud",
