--- a/MyHomeApp/src/main/webapp/i18n/es/global.json
+++ b/MyHomeApp/src/main/webapp/i18n/es/global.json
@@ -100,6 +100,7 @@
       "delete": "Eliminar",
       "edit": "Editar",
       "open": "Abrir",
+      "close": "Cerrar",
       "save": "Guardar",
       "view": "Vista",
       "show": "Show {{otherEntity}}"
