Arreglo listado y editar incidencia

--- a/MyHomeApp/src/main/webapp/i18n/es/global.json
+++ b/MyHomeApp/src/main/webapp/i18n/es/global.json
@@ -147,5 +147,6 @@
       "not.image": "Se esperaba que el fichero fuera una imagen pero se encontro \"{{ fileType }}\""
     }
   },
-  "footer": "Pie de página"
+  "footer": "Pie de página",
+  "any" : "Cualquiera"
 }
