Se hace la gestion de la incidencia

--- a/MyHomeApp/src/main/webapp/i18n/es/incidences.json
+++ b/MyHomeApp/src/main/webapp/i18n/es/incidences.json
@@ -117,6 +117,11 @@
         "delete": {
           "question": "¿Seguro que quieres eliminarla incidencia {{ title }}?"
         },
+        "employee": {
+          "title": "Asignar incidencia",
+          "question": "¿Seguro que quieres asignarte la incidencia {{ title }}?",
+          "btn_asignar": "Asignar"
+        },
         "detail": {
           "title_view": "Incidencia",
           "title" : "Título",
