--- a/MyHomeApp/src/main/webapp/i18n/en/global.json
+++ b/MyHomeApp/src/main/webapp/i18n/en/global.json
@@ -143,5 +143,5 @@
       "not.image": "File was expected to be an image but was found to be \"{{ fileType }}\""
     }
   },
-  "footer": "This is your footer"
+  "footer": "Portal incidencias <a href=\"https://uah.es/es/\">UAH 2023</a>"
 }
