--- a/MyHomeApp/src/main/webapp/i18n/es/global.json
+++ b/MyHomeApp/src/main/webapp/i18n/es/global.json
@@ -147,6 +147,6 @@
       "not.image": "Se esperaba que el fichero fuera una imagen pero se encontro \"{{ fileType }}\""
     }
   },
-  "footer": "Pie de página",
+  "footer": "Portal incidencias <a href=\"https://uah.es/es/\">UAH 2023</a>",
   "any" : "Cualquiera"
 }
