--- a/MyHomeApp/src/main/webapp/i18n/pt-pt/global.json
+++ b/MyHomeApp/src/main/webapp/i18n/pt-pt/global.json
@@ -142,5 +142,5 @@
       "not.image": "File was expected to be an image but was found to be \"{{ fileType }}\""
     }
   },
-  "footer": "Este é o seu rodapé"
+  "footer": "Portal incidencias <a href=\"https://uah.es/es/\">UAH 2023</a>"
 }
